--- a/config/config.ini
+++ b/config/config.ini
@@ -11,4 +11,4 @@ NAME_LOCATION="Novosibirsk"
 [Model]
 INCR_SPEC_IMMUN_CONSTANT=1/IMMUN_DAYS
 INCR_VIR_LOAD_CONSTANT=200
-VIR_LOAD_TRESHOLD=800
+VIR_LOAD_THRESHOLD=800
