--- a/config/config.ini
+++ b/config/config.ini
@@ -12,3 +12,8 @@ NAME_LOCATION="Novosibirsk"
 INCR_SPEC_IMMUN_CONSTANT=1/IMMUN_DAYS
 INCR_VIR_LOAD_CONSTANT=200
 VIR_LOAD_THRESHOLD=800
+INITIAL_INFECTED_PEOPLE_COUNT=5
+DAYS_COUNT=100
+MILD_THRESHOLD=1500
+SEVERE_THRESHOLD=2500
+
