--- a/config/config.ini
+++ b/config/config.ini
@@ -14,6 +14,7 @@ INCR_VIR_LOAD_CONSTANT=200
 VIR_LOAD_THRESHOLD=800
 INITIAL_INFECTED_PEOPLE_COUNT=100
 DAYS_COUNT=100
-MILD_THRESHOLD=2500
+MILD_THRESHOLD=3500
 SEVERE_THRESHOLD=5000
+DEAD_THRESHOLD=6000
 
