added random small/big groups

--- a/config/cities/Voronesh.ini
+++ b/config/cities/Voronesh.ini
@@ -1,3 +1,11 @@
 [City]
 POPULATION_COUNT=100000
 NAME_LOCATION=Voronesh
+BIG_GROUP_SIZE_UP_25_MEAN=5
+BIG_GROUP_SIZE_UP_60_MEAN=20
+BIG_GROUP_SIZE_AFTER_60_MEAN=1
+BIG_GROUP_SIZE_UP_25_SIGMA=3
+BIG_GROUP_SIZE_UP_60_SIGMA=5
+BIG_GROUP_SIZE_AFTER_60_SIGMA=3
+SMALL_GROUP_SIZE_MEAN=3
+SMALL_GROUP_SIZE_SIGMA=2
